--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
 @import "tailwindcss";
 
 @layer base {
-
-
   .font-belleza {
     font-family: 'Belleza', sans-serif;
   }
-  
+
   .font-bilbo {
     font-family: 'Bilbo Swash Caps', cursive;
   }
@@ -15,6 +13,27 @@
     font-family: 'Poppins', sans-serif;
   }
 
+  .font-montserrat {
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .font-kanit {
+    font-family: 'Kanit', sans-serif;
+  }
+
+  .font-bebas {
+    font-family: 'Bebas Neue', sans-serif;
+  }
+
+  .font-league-gothic {
+    font-family: 'League Gothic', sans-serif;
+  }
+
+  .font-michroma {
+    font-family: 'Michroma', sans-serif;
+  }
+
+  /* Add more custom font classes as needed */
 
   body, html {
     overflow-x: hidden;
@@ -22,20 +41,18 @@
 
   ::-webkit-scrollbar {
     width: 5px;
-}
+  }
 
-::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background: #f3f4f6;
   }
 
-::-webkit-scrollbar-thumb {
-    background: #999999; 
+  ::-webkit-scrollbar-thumb {
+    background: #999999;
+  }
 
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #f9a319; 
-    opacity: 0.8; 
-}
-  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #f9a319;
+    opacity: 0.8;
+  }
 }
